# Strategy-for-City-GovTech

./: AGENTS.md  CITATION.cff  PLAN.md  README.md  pyproject.toml
.github/workflows/: build-docs.yml  quarterly-review.yml
Archive/: README.md  branch-audit-2026-06-21.md
Archive/branch-snapshots/claude__dazzling-meitner-jcb6jc/: requirements.txt
Archive/branch-snapshots/claude__dazzling-meitner-n9i8bj/: LICENSE
Archive/branch-snapshots/claude__wonderful-lovelace-03xyj1/: AGENTS.md
Archive/branch-snapshots/claude__wonderful-lovelace-1ena50/: .gitignore
Archive/branch-snapshots/claude__wonderful-lovelace-7akm8l/: README.md
Archive/branch-snapshots/claude__wonderful-lovelace-jlou9h/: README.md
Archive/branch-snapshots/main/: CITATION.cff
Doc/: README.md
Doc/de/: appendices-v0.2.0.de.md  souveraen-durch-design-v0.2.0.de.html  souveraen-durch-design-v0.2.0.de.md  souveraen-durch-design-v0.3.0.de.html  souveraen-durch-design-v0.3.0.de.md  sovereign-by-design-v0.1.0.de.md  sovereign-by-design-v0.2.0.de.html  sovereign-by-design-v0.2.0.de.md  sovereign-by-design-v0.3.0.de.html  sovereign-by-design-v0.3.0.de.md
Doc/en/: appendices-v0.2.0.md  sovereign-by-design-v0.1.0.md  sovereign-by-design-v0.2.0.html  sovereign-by-design-v0.2.0.md  sovereign-by-design-v0.3.0.html  sovereign-by-design-v0.3.0.md
Mem/: README.md  literature-review-state.md  research-notes.md  source-registry.md
Scripts/: README.md  build_govtech_docs.py  generate_html.py  smoke_check.py  tco_calculator.py  translate_document.py  update_literature_review.py  validate_citations.py
(+102 files in other folders)
