[project]
name = "strategy-for-city-govtech"
version = "0.3.0"
description = "Open-source municipal GovTech strategy papers and document build automation."
readme = "README.md"
requires-python = ">=3.11,<3.14"
license = "CC-BY-4.0"
dependencies = [
    "markdown>=3.5",
    "mistune>=3.0",
    "pypdf>=5.0",
    "python-docx>=1.1.0",
    "pyyaml>=6.0",
    "weasyprint>=60.0",
]

[tool.uv]
package = false
